# Aggregate-Map-2-proportion-flooded-and-average-depth

./: CMakeLists.txt  Neighbourhood.h  RasterCoordinates.h  ReadInMap.cpp  ReadInMap.h
v1/: AggregateMap.cpp  Neighbourhood.cpp  Neighbourhood_Impl.cpp  Print.cpp  Print.h  Print_Impl.cpp  README.md  Types.h
v2/: AggregateMap.cpp  AggregateMap.h  CMakeLists.txt  Main.cpp  Neighbourhood.cpp  Neighbourhood.h  Neighbourhood_Impl.cpp  RasterCoordinates.cpp  Types.h
